Plugin Name: Subscribe by Email
Author: S H Mohanjith (Incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

1.1.2 -
----------------------------------------------------------------------
- Make button text a widget option
- E-mail validation

1.1.1 - 01/01/2012 - S H Mohanjith
----------------------------------------------------------------------
- Fixed: Undefined variables
- Removed unused Modal Box js and css
- Usability improvements
- WordPress 3.3 improvements

1.1.0 - 10/02/2011 - S H Mohanjith
----------------------------------------------------------------------
- Fixed: Reschedule before timing out
- Fixed: Undefined index: action

1.0.9 - 
----------------------------------------------------------------------
- Fixed: Image editing issue caused by Subscribe by Email

1.0.8 - 05/13/2011 - S H Mohanjith
----------------------------------------------------------------------
- Notification mail as an option

1.0.7 - 05/13/2011 - S H Mohanjith
----------------------------------------------------------------------
- Fixed: Authors Name not appearing in email

1.0.6 - 05/13/2011 - S H Mohanjith
----------------------------------------------------------------------
- Fixed: Authors Name not appearing in email

1.0.5 - 05/08/2011 - Aaron Edwards
----------------------------------------------------------------------
- Fixed encoding for blog names that have quotes in them

1.0.4 - 04/27/2011
----------------------------------------------------------------------
- Fixed: Javascript error in IE8
- Fixed: Search subscriptions

1.0.3 - 18/03/2011
----------------------------------------------------------------------
- Fixed: Returns the image code whe image is the first item in a post

1.0.2 - 01/09/2011
----------------------------------------------------------------------
- 3.1+ compatibility update

1.0.1 - 06/01/2010