@@ -2,8 +2,8 @@
 	function SubscribeByEmailCreate() {
 		var SubscriptionEmail = document.getElementById('subscription_email').value;
 		var http = new XMLHttpRequest();
-		if ( SubscriptionEmail != '' && SubscriptionEmail != 'ex: john@hotmail.com') {
-			if ( !SubscriptionEmail.match(/^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/) ) {
+		if ( SubscriptionEmail != '' && SubscriptionEmail != sbe_localized.default_email ) {
+			if ( !SubscriptionEmail.match( /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/ ) ) {
 				jQuery('#subscribe-by-email-msg').html('<div style=\'font-size:20px; padding-bottom:20px;\'><p><center><strong>'+sbe_localized.invalid_email+'</strong></ceneter></p></div>');
 				return false;
 			}
@@ -25,7 +25,9 @@
 				}
 			}
 			http.send(params);
+			return true;
 		}
+		return false;
 	}
 	function SubscribeByEmailCancel() {
 		var SubscriptionEmail = document.getElementById('subscription_email').value;
